[package]
name = "navigator"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.18"
env_logger = "0.10.0"
tareldar = { git = "https://github.com/connor-mcnaboe/Tareldar.git", branch="main"}
nalgebra = "0.32.2"